[gd_scene load_steps=5 format=2]

[ext_resource path="res://Images/Tiger.png" type="Texture" id=1]
[ext_resource path="res://Main Project/Player/Tiger Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 20 )

[node name="Tiger Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="tiger" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="TigerArea" type="Area2D" parent="tiger"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="tiger/TigerArea"]
shape = SubResource( 2 )

[node name="RayCastDown" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 15 )
collide_with_areas = true

[node name="RayCastRight" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 15 )
collide_with_areas = true

[node name="RayCastUp" type="RayCast2D" parent="."]
rotation = -3.14159
enabled = true
cast_to = Vector2( 0, 15 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
rotation = -4.71239
enabled = true
cast_to = Vector2( 0, 15 )
[connection signal="input_event" from="tiger/TigerArea" to="." method="_on_TigerArea_input_event"]
